--- a/style.css
+++ b/style.css
@@ -9,13 +9,19 @@
     background-image: url('R.png');
     background-size:100%;
     background-repeat: no-repeat;
-	position: relative;
 	height: 100vh;
 }
 
 /* cria uma borda em volta dos elementos da pagina. */
 form{ 
-    position: relative;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
     top: 220px;
     padding: 70px;
     width: 600px;
